--- a/.github/workflows/compute-engine.yml
+++ b/.github/workflows/compute-engine.yml
@@ -37,4 +37,4 @@ jobs:
 
       - name: Deploy image
         run: |
-          gcloud compute ssh --zone $GCE_INSTANCE_ZONE $GCE_INSTANCE --command 'docker tag eu.gcr.io/${{ secrets.GCP_PROJECT_ID }/carpricepred:latest carpricepred:latest  && docker-compose up -d'
+          gcloud compute ssh --zone $GCE_INSTANCE_ZONE $GCE_INSTANCE --command 'docker tag eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest carpricepred:latest  && docker-compose up -d'
