--- a/.github/workflows/compute-engine.yml
+++ b/.github/workflows/compute-engine.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@main
 
       - name: Setup GCP Service Account
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
@@ -29,7 +29,7 @@ jobs:
 
       - name: Push
         run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest
+          docker push eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest
 
       - name: Pull image
         run: |
