--- a/.github/workflows/compute-engine.yml
+++ b/.github/workflows/compute-engine.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           docker push eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest
 
+      - name: Echo Hello VM
+        run: gcloud compute ssh --zone $GCE_INSTANCE_ZONE $GCE_INSTANCE --command 'echo "Hello World"'
 
       - name: Configure docker to pull from gcr On VM
         run: |
