--- a/.github/workflows/compute-engine.yml
+++ b/.github/workflows/compute-engine.yml
@@ -19,29 +19,5 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Configure Docker
-        run: |
-          gcloud auth configure-docker
-
-      - name: Build
-        run: |
-          docker build -t eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest .
-
-      - name: Push
-        run: |
-          docker push eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest
-
       - name: Echo Hello VM
-        run: gcloud compute ssh --zone $GCE_INSTANCE_ZONE $GCE_INSTANCE --command 'echo "Hello World"'
-
-      - name: Configure docker to pull from gcr On VM
-        run: |
-          gcloud compute ssh --zone=$GCE_INSTANCE_ZONE $GCE_INSTANCE --command 'gcloud auth configure-docker'
-
-      - name: Pull image
-        run: |
-          gcloud compute ssh $GCE_INSTANCE --zone $GCE_INSTANCE_ZONE  --command 'docker pull eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest'
-
-      - name: Deploy image
-        run: |
-          gcloud compute ssh $GCE_INSTANCE --zone $GCE_INSTANCE_ZONE  --command 'docker tag eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest carpricepred:latest  && docker-compose up -d'
+        run: gcloud compute ssh --zone $GCE_INSTANCE_ZONE ${{ secrets.GCP_SA_EMAIL }}@$GCE_INSTANCE --command 'echo "Hello World"'
