--- a/.github/workflows/compute-engine.yml
+++ b/.github/workflows/compute-engine.yml
@@ -19,8 +19,5 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Deploy
-        run: |-
-          gcloud compute instances update-container "$GCE_INSTANCE" \
-            --zone "$GCE_INSTANCE_ZONE" \
-            --container-image "eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest"
+      - name: Echo Hello VM
+        run: gcloud compute ssh --zone ${{ secrets.GCE_INSTANCE_ZONE }} ${{ secrets.GCE_INSTANCE }} --command 'echo "Hello World"'
