--- a/.github/workflows/compute-engine.yml
+++ b/.github/workflows/compute-engine.yml
@@ -19,5 +19,14 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Echo Hello VM
-        run: gcloud compute ssh --zone ${{ secrets.GCE_INSTANCE_ZONE }} ${{ secrets.GCE_INSTANCE }} --command 'echo "Hello World"'
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker
+
+      - name: Build
+        run: |
+          docker build -t eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest .
+
+      - name: Push
+        run: |
+          docker push eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest
