--- a/.github/workflows/heart-disease-predection.yml
+++ b/.github/workflows/heart-disease-predection.yml
@@ -1,4 +1,4 @@
-name: deploy-car model
+name: heart-disease-predection-build
 
 on: [push]
 
@@ -25,8 +25,8 @@ jobs:
 
       - name: Build
         run: |
-          docker build -t eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest .
+          docker build -t eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/heart-disease-predection:latest heart-disease-predection_Dockerfile .
 
       - name: Push
         run: |
-          docker push eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/carpricepred:latest
+          docker push eu.gcr.io/${{ secrets.GCP_PROJECT_ID }}/heart-disease-predection:latest
