--- a/heart-disease-predict-docker-compose.yml
+++ b/heart-disease-predict-docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.8"
 services:
- app:
-   image: "heart-disease-predection:latest"
-   container_name: heart-disease-predection
-   hostname: heart-disease.predict.com
+ application2:
+   build:
+     context: .
+     dockerfile: heart-disease-predection_Dockerfile
+   container_name: heart-disease-prediction
    ports:
      - "8080:8080"
